dashboard.yaml
# deprecated

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dashboard-deployment
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app:  dashboard
        editor: vscode
        author: Francesco-Uliana
    spec:
      containers:
      - name: dashboard-container
        image: francescou/dashboard:1.7
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name:  dashboard-svc
spec:
  selector:
    app:  dashboard
  type:  NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  80
