pg.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        editor: vscode
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:alpine
        ports:
        - containerPort: 5432

---

kind: Service
apiVersion: v1
metadata:
  name:  postgres-svc
spec:
  selector:
    app: postgres
  type:  LoadBalancer
  ports:
  - name:  postgres
    port:  5432
    targetPort:  5432
