thermostat.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thermostat-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app:  thermostat
        editor: vscode
        author: Francesco-Uliana
    spec:
      containers:
      - name: thermostat-container
        image: francescou/thermostat:1.3
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name:  thermostat-svc
spec:
  selector:
    app:  thermostat
  type:  NodePort
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
