ingress-tutorial.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: empty-svc
    servicePort: 80
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard-svc
          servicePort: 80
      - path: /api/temperature
        backend:
          serviceName: temperature-svc
          servicePort: 8080
      - path: /api/humidity
        backend:
          serviceName: humidity-svc
          servicePort: 8080
      - path: /api/thermostat
        backend:
          serviceName: thermostat-svc
          servicePort: 8080
